# packaging-lead-agent

./: .env.sample  .gitignore  PLAYBOOK.md  README.md  demo.py  demo_output.md  eval.py  pyproject.toml  resume.txt  sample_inputs.md  ui.py  verify_gemini.py
config/: business_config.json  similar_msme_config_example.json
eval/: test_cases.json
packaging_lead_intake/: __init__.py  agent.py  config_loader.py  pipeline.py  stt.py  tools.py
packlead/: __init__.py  agent.py  config_loader.py  pipeline.py  stt.py
tests/: test_lead_qualification.py
